--- a/Loginator/MainWindow.xaml
+++ b/Loginator/MainWindow.xaml
@@ -26,16 +26,16 @@
                         </TextBox.InputBindings>
                     </TextBox>
                     <Button Content="Limit" Width="60" Margin="2,0,0,0" Command="{Binding UpdateNumberOfLogsPerLevelCommand}"></Button>
-                    <TextBox Text="{Binding SearchCriteria, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter search query" Width="Auto" MinWidth="100" Margin="16,0,0,0">
+                    <TextBox Text="{Binding Search.Criteria, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter search query" Width="Auto" MinWidth="100" Margin="16,0,0,0">
                         <TextBox.InputBindings>
-                            <KeyBinding Key="Enter" Command="{Binding UpdateSearchCriteriaCommand}"/>
+                            <KeyBinding Key="Enter" Command="{Binding Search.UpdateCommand}"/>
                         </TextBox.InputBindings>
                     </TextBox>
-                    <Button Content="{Binding UpdateSearchCriteriaCommandName}" Width="60" Margin="2,0,0,0"
-                            Command="{Binding UpdateSearchCriteriaCommand}"
-                            CommandParameter="{Binding UpdateSearchCriteriaCommandName}"></Button>
-                    <CheckBox Content="Invert" IsChecked="{Binding IsInverted}" Margin="2,2,0,0"
-                              Command="{Binding UpdateSearchCriteriaCommand}"
+                    <Button Content="{Binding Search.UpdateCommandName}" Width="60" Margin="2,0,0,0"
+                            Command="{Binding Search.UpdateCommand}"
+                            CommandParameter="{Binding Search.UpdateCommandName}"></Button>
+                    <CheckBox Content="Invert" IsChecked="{Binding Search.IsInverted}" Margin="2,2,0,0"
+                              Command="{Binding Search.UpdateCommand}"
                               CommandParameter="Invert"></CheckBox>
                     <Grid>
                         <Button Content="Configure..." Width="80" Margin="0,0,332,0" Command="{Binding OpenConfigurationCommand}" HorizontalAlignment="Right"></Button>
