--- a/Loginator/MainWindow.xaml
+++ b/Loginator/MainWindow.xaml
@@ -105,6 +105,11 @@
             </ListView>
             <GridSplitter Grid.Row="1" ResizeBehavior="BasedOnAlignment" ResizeDirection="Rows" Height="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             <ScrollViewer Grid.Row="2">
+                <ScrollViewer.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Copy exception" Command="{Binding CopySelectedLogExceptionCommand}" />
+                    </ContextMenu>
+                </ScrollViewer.ContextMenu>
                 <TextBox Background="Transparent" BorderThickness="0" Text="{Binding SelectedLog, Converter={StaticResource LogToTextConverter}}" VerticalAlignment="Top" VerticalContentAlignment="Top" IsReadOnly="True" TextWrapping="Wrap" Height="Auto" Margin="0,0,0,0" />
             </ScrollViewer>
         </Grid>
