--- a/Loginator/MainWindow.xaml
+++ b/Loginator/MainWindow.xaml
@@ -2,11 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Loginator.Controls"
+        xmlns:converters="clr-namespace:Loginator.Converter"
         DataContext="{Binding LoginatorViewModel, Source={StaticResource Locator}}"
         WindowStartupLocation="CenterScreen"
         Title="Loginator" Height="600" Width="920" MinHeight="600" MinWidth="920"
         Icon="icon.ico">
     <Grid Margin="2">
+        <Grid.Resources>
+            <converters:StringToIntConverter x:Key="stringToInt" />
+        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="24" />
             <RowDefinition Height="*" />
@@ -20,13 +24,19 @@
             <StackPanel Orientation="Vertical">
                 <DockPanel>
                     <CheckBox Content="Is active" IsChecked="{Binding IsActive}"></CheckBox>
-                    <TextBox Text="{Binding NumberOfLogsPerLevel}" ToolTip="Enter limit per application per log level" Width="100" Margin="16,0,0,0">
+                    <TextBox Name="numberOfLogsPerLevel" Text="{Binding NumberOfLogsPerLevel, Mode=OneWay}"
+                             ToolTip="Enter limit per application per log level" Width="100" Margin="16,0,0,0" PreviewTextInput="OnPreviewTextInput_NumberOfLogsPerLevel">
                         <TextBox.InputBindings>
-                            <KeyBinding Key="Enter" Command="{Binding UpdateNumberOfLogsPerLevelCommand}"/>
+                            <KeyBinding Key="Enter"
+                                        Command="{Binding UpdateNumberOfLogsPerLevelCommand}"
+                                        CommandParameter="{Binding Text, ElementName=numberOfLogsPerLevel, Converter={StaticResource stringToInt}}"/>
                         </TextBox.InputBindings>
                     </TextBox>
-                    <Button Content="Limit" Width="60" Margin="2,0,0,0" Command="{Binding UpdateNumberOfLogsPerLevelCommand}"></Button>
-                    <TextBox Text="{Binding Search.Criteria, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter search query" Width="Auto" MinWidth="100" Margin="16,0,0,0">
+                    <Button Content="Limit" Width="60" Margin="2,0,0,0"
+                            Command="{Binding UpdateNumberOfLogsPerLevelCommand}"
+                            CommandParameter="{Binding Text, ElementName=numberOfLogsPerLevel, Converter={StaticResource stringToInt}}"></Button>
+                    <TextBox Text="{Binding Search.Criteria}"
+                             ToolTip="Enter search query" Width="Auto" MinWidth="100" Margin="16,0,0,0">
                         <TextBox.InputBindings>
                             <KeyBinding Key="Enter" Command="{Binding Search.UpdateCommand}"/>
                         </TextBox.InputBindings>
