--- a/Loginator/MainWindow.xaml
+++ b/Loginator/MainWindow.xaml
@@ -35,7 +35,7 @@
                     <Button Content="Limit" Width="60" Margin="2,0,0,0"
                             Command="{Binding UpdateNumberOfLogsPerLevelCommand}"
                             CommandParameter="{Binding Text, ElementName=numberOfLogsPerLevel, Converter={StaticResource stringToInt}}"></Button>
-                    <TextBox Text="{Binding Search.Criteria}"
+                    <TextBox Text="{Binding Search.Criteria, UpdateSourceTrigger=PropertyChanged}"
                              ToolTip="Enter search query" Width="Auto" MinWidth="100" Margin="16,0,0,0">
                         <TextBox.InputBindings>
                             <KeyBinding Key="Enter" Command="{Binding Search.UpdateCommand}"/>
@@ -51,7 +51,7 @@
                         <Button Content="Configure..." Width="80" Margin="0,0,332,0" Command="{Binding OpenConfigurationCommand}" HorizontalAlignment="Right"></Button>
                         <Button Content="Clear Logs" Width="80" Margin="0,0, 249,0" Command="{Binding ClearLogsCommand}" HorizontalAlignment="Right"></Button>
                         <Button Content="Clear All" Width="80" Margin="0,0,166,0" Command="{Binding ClearAllCommand}" HorizontalAlignment="Right"></Button>
-                        <Button Content="Unselect All" Width="80" Margin="0,0,83,0" Command="{Binding UnselectAllCommand}" HorizontalAlignment="Right"></Button>
+                        <Button Content="Unselect All" Width="80" Margin="0,0,83,0" Command="{Binding DeactivateAllApplicationsCommand}" HorizontalAlignment="Right"></Button>
                         <ComboBox ItemsSource="{Binding Path=LogLevels}" DisplayMemberPath="Name" SelectedValue="{Binding SelectedInitialLogLevel}" Width="70" Margin="2,0,2,0" HorizontalAlignment="Right"/>
                     </Grid>
                 </DockPanel>
