--- a/Loginator/Views/ConfigurationWindow.xaml
+++ b/Loginator/Views/ConfigurationWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Loginator.ConfigurationWindow"
+﻿<Window x:Class="Loginator.Views.ConfigurationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:common="clr-namespace:Common;assembly=Common"
