--- a/Loginator/Views/MainWindow.xaml
+++ b/Loginator/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Loginator.MainWindow"
+﻿<Window x:Class="Loginator.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Loginator.Controls"
@@ -6,7 +6,7 @@
         DataContext="{Binding LoginatorViewModel, Source={StaticResource Locator}}"
         WindowStartupLocation="CenterScreen"
         Title="Loginator" Height="600" Width="920" MinHeight="600" MinWidth="920"
-        Icon="icon.ico">
+        Icon="../Resources/icon.ico">
     <Grid Margin="2">
         <Grid.Resources>
             <converters:StringToIntConverter x:Key="stringToInt" />
