Exchange selected log textbox for grid, add command and buttons to copy selected log and message to clipboard

--- a/Loginator/App.xaml
+++ b/Loginator/App.xaml
@@ -37,8 +37,8 @@
         <converter:LevelToForegroundConverter x:Key="LevelToForegroundConverter"></converter:LevelToForegroundConverter>
         <converter:IsEqualsConverter x:Key="IsEqualsConverter"></converter:IsEqualsConverter>
         <converter:SingleLineTextConverter x:Key="SingleLineTextConverter"></converter:SingleLineTextConverter>
-        <converter:LogToTextConverter x:Key="LogToTextConverter"></converter:LogToTextConverter>
         <converter:RadioButtonCheckedConverter x:Key="RadioButtonCheckedConverter"></converter:RadioButtonCheckedConverter>
+        <converter:ExistsToVisibilityConverter x:Key="ExistsToVisibilityConverter"></converter:ExistsToVisibilityConverter>
 
         <viewModels:ViewModelLocator x:Key="Locator" d:IsDataSource="True"/>
         
