Add ViewModelToLogConverter to use LogViewModel only for selected logs and make it read only, remove AutoMapper

--- a/Loginator/Views/MainWindow.xaml
+++ b/Loginator/Views/MainWindow.xaml
@@ -64,7 +64,7 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <ListView Grid.Row="0"
-                SelectedItem="{Binding SelectedLog}"
+                SelectedItem="{Binding SelectedLog, Converter={StaticResource ViewModelToLogConverter}}"
                 ItemsSource="{Binding Logs}"
                 Name="lvLogs"
                 SelectionMode="Single"
