--- a/Loginator/App.xaml
+++ b/Loginator/App.xaml
@@ -40,6 +40,7 @@
         <converter:RadioButtonCheckedConverter x:Key="RadioButtonCheckedConverter"></converter:RadioButtonCheckedConverter>
         <converter:ExistsToVisibilityConverter x:Key="ExistsToVisibilityConverter"></converter:ExistsToVisibilityConverter>
         <converter:TimestampConverter x:Key="TimestampConverter"></converter:TimestampConverter>
+        <converter:ViewModelToLogConverter x:Key="ViewModelToLogConverter"></converter:ViewModelToLogConverter>
 
         <viewModels:ViewModelLocator x:Key="Locator" d:IsDataSource="True"/>
         
