--- a/Loginator/Views/ConfigurationWindow.xaml
+++ b/Loginator/Views/ConfigurationWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="Loginator.Views.ConfigurationWindow"
+﻿<!-- Copyright (C) 2024 Claudia Wagner, Daniel Kuster -->
+<Window x:Class="Loginator.Views.ConfigurationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:common="clr-namespace:Common;assembly=Common"
         DataContext="{Binding ConfigurationViewModel, Source={StaticResource Locator}}"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
-        Title="Configuration" Height="260" Width="260">
+        Title="Configuration" Height="325" Width="260">
     <Grid Margin="2" VerticalAlignment="Stretch">
         <StackPanel>
             <Label Content="Source" FontWeight="Bold"/>
@@ -24,11 +25,13 @@
             <Label Content="Time format" FontWeight="Bold"/>
             <RadioButton Content="Convert to local time" GroupName="TimeFormat" IsChecked="{Binding LogTimeFormat, Converter={StaticResource RadioButtonCheckedConverter}, ConverterParameter={x:Static common:LogTimeFormat.ConvertToLocalTime}}" Margin="32,4,0,0"/>
             <RadioButton Content="Do not change" GroupName="TimeFormat" IsChecked="{Binding LogTimeFormat, Converter={StaticResource RadioButtonCheckedConverter}, ConverterParameter={x:Static common:LogTimeFormat.DoNotChange}}" Margin="32,4,0,0"/>
+            <Label Content="Application format" FontWeight="Bold"/>
+            <RadioButton Content="Consolidate processes" GroupName="ApplicationFormat" IsChecked="{Binding ApplicationFormat, Converter={StaticResource RadioButtonCheckedConverter}, ConverterParameter={x:Static common:ApplicationFormat.Consolidate}}" Margin="32,4,0,0"/>
+            <RadioButton Content="Do not change" GroupName="ApplicationFormat" IsChecked="{Binding ApplicationFormat, Converter={StaticResource RadioButtonCheckedConverter}, ConverterParameter={x:Static common:ApplicationFormat.DoNotChange}}" Margin="32,4,0,0"/>
         </StackPanel>
         <StackPanel VerticalAlignment="Bottom" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Cancel" Command="{Binding CancelChangesCommand}" Margin="0,0,4,0" Width="80"/>
             <Button Content="Accept" Command="{Binding AcceptChangesCommand}" Width="80"/>
         </StackPanel>
-        
     </Grid>
 </Window>
