Adapt Log to https://logging.apache.org/chainsaw/2.x/

--- a/Loginator/Views/MainWindow.xaml
+++ b/Loginator/Views/MainWindow.xaml
@@ -69,8 +69,7 @@
                 ItemsSource="{Binding Logs}"
                 Name="lvLogs"
                 SelectionMode="Single"
-                controls:GridViewColumnResize.Enabled="True"
-                >
+                controls:GridViewColumnResize.Enabled="True">
                 <ListView.View>
                     <GridView AllowsColumnReorder="False">
                         <GridViewColumn Header="Timestamp" controls:GridViewColumnResize.Width="140">
@@ -89,18 +88,18 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="Context" controls:GridViewColumnResize.Width="100">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Context, Converter={StaticResource SingleLineTextConverter}}"
-                                               Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}" />
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
                         <GridViewColumn Header="Message" controls:GridViewColumnResize.Width="*">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Message, Converter={StaticResource SingleLineTextConverter}}"
+                                               Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Context" controls:GridViewColumnResize.Width="100">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Context, Converter={StaticResource SingleLineTextConverter}}"
                                                Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
@@ -142,7 +141,7 @@
                       DataContext="{Binding SelectedLog}">
                     <Grid.Resources>
                         <Style TargetType="Label">
-                            <Setter Property="Margin" Value="0,-5,0,-3"/>
+                            <Setter Property="Margin" Value="0,-5,3,-3"/>
                             <Setter Property="VerticalAlignment" Value="Top"/>
                         </Style>
                         <Style TargetType="TextBlock">
@@ -158,35 +157,39 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Row="0" Grid.Column="0" Content="Application:" />
+                    <Label Grid.Row="0" Grid.Column="0" Content="Application" />
                     <TextBlock Grid.Row="0" Grid.Column="1"
                                Text="{Binding ApplicationProcess}" />
-                    <Label Grid.Row="1" Grid.Column="0" Content="Namespace:" />
+                    <Label Grid.Row="1" Grid.Column="0" Content="Namespace" />
                     <TextBlock Grid.Row="1" Grid.Column="1"
                                Text="{Binding Namespace}" />
-                    <Label Grid.Row="2" Grid.Column="0" Content="Context:" />
+                    <Label Grid.Row="2" Grid.Column="0" Content="Thread" />
                     <TextBlock Grid.Row="2" Grid.Column="1"
-                               Text="{Binding Context}" />
-                    <Label Grid.Row="3" Grid.Column="0" Content="Thread:" />
-                    <TextBlock Grid.Row="3" Grid.Column="1"
                                Text="{Binding Thread}" />
-                    <Label Grid.Row="4" Grid.Column="0" Content="Message:" />
-                    <TextBlock Grid.Row="4" Grid.Column="1"
+                    <Label Grid.Row="3" Grid.Column="0" Content="Message" />
+                    <TextBlock Grid.Row="3" Grid.Column="1"
                                Text="{Binding Message}" />
-                    <Label Grid.Row="5" Grid.Column="0" Content="Exception:"
+                    <Label Grid.Row="4" Grid.Column="0" Content="Exception"
                                Visibility="{Binding Exception, Converter={StaticResource ExistsToVisibilityConverter}}" />
-                    <TextBlock Grid.Row="5" Grid.Column="1" Text="{Binding Exception}"
+                    <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Exception}"
                                Visibility="{Binding Exception, Converter={StaticResource ExistsToVisibilityConverter}}" />
-                    <Label Grid.Row="6" Grid.Column="0" Content="Location:" />
+                    <Label Grid.Row="5" Grid.Column="0" Content="Context" />
+                    <TextBlock Grid.Row="5" Grid.Column="1"
+                               Text="{Binding Context}" />
+                    <Label Grid.Row="6" Grid.Column="0" Content="Properties" />
                     <TextBlock Grid.Row="6" Grid.Column="1"
-                               Text="{Binding Location}" />
-                    <Label Grid.Row="7" Grid.Column="0" Content="Host:" />
+                               Text="{Binding Properties}" />
+                    <Label Grid.Row="7" Grid.Column="0" Content="Location" />
                     <TextBlock Grid.Row="7" Grid.Column="1"
+                               Text="{Binding Location}" />
+                    <Label Grid.Row="8" Grid.Column="0" Content="Host" />
+                    <TextBlock Grid.Row="8" Grid.Column="1"
                                Text="{Binding MachineName}" />
                 </Grid>
             </ScrollViewer>
